--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cities in the World</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
   <link rel="stylesheet" href="./dist/output.css">
 </head>
 <body class="bg-gray-100 font-sans">
-
   <!-- Header -->
   <header class="bg-gray-800 text-white p-4 flex justify-between">
     <h1 class="text-lg font-bold">Cities in the World</h1>
@@ -19,7 +19,7 @@
   </header>
 
   <!-- Main Content -->
-  <div class="max-w-6xl mx-auto p-6">
+  <main class="max-w-6xl mx-auto p-6">
     <!-- Title -->
     <h2 class="text-3xl font-bold text-center my-6">The Most Popular City</h2>
 
@@ -93,12 +93,11 @@
         <p class="mt-2 text-sm text-gray-700">Lorem Ipsum</p>
       </div>
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white p-4 text-center">
-    &copy; 2025 Company, Inc
+    &copy; 2021 Company, Inc
   </footer>
 </body>
 </html>
-
