Updated gaps and padding for improved layout consistency and spacing adjustments

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </nav>
 </header>
-<div class="max-w-6xl mx-auto p-6">
+<div class="max-w-6xl mx-auto p-2 mt-2">
         <div class="relative bg-cover bg-center h-48 flex items-center justify-center" 
              style="background-image: url('asset/north-america-1803504_1280.jpg');">
           <h2 class="text-3xl font-bold text-white bg-gray-900 bg-opacity-50 px-4 py-2 rounded">
@@ -34,7 +34,7 @@
 
 <!-- Contenedor para Sidebar y Cards -->
 <div class="max-w-6xl mx-auto p-6">
-  <div class="flex flex-wrap lg:flex-nowrap gap-6">
+  <div class="flex flex-wrap lg:flex-nowrap gap-4">
 
       <!-- Sidebar -->
     <aside class="w-full lg:w-1/4 bg-gray-200 p-4">
@@ -80,7 +80,8 @@
       </aside>
     
       <!-- Cards -->
-      <section class="w-full lg:w-3/4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+      <section class="w-full lg:w-3/4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+      
         <div class="bg-white shadow-md rounded-lg overflow-hidden">
           <img src="asset/new-york1.jpg" alt="New York" class="w-full h-40 object-cover">
           <div class="p-3">
@@ -144,9 +145,9 @@
             <h3 class="text-xl font-bold mb-1">Paris</h3>
             <p class="text-gray-700 text-sm mb-2">
               Paris, known as "The City of Light," is a timeless symbol of romance, culture, and elegance. Famous for its iconic Eiffel Tower, the city
-               captivates visitors with its breathtaking views and architectural beauty. The Louvre Museum, home to masterpieces like the Mona Lisa, and 
-               the Musée d'Orsay, showcasing impressionist art, highlight its rich artistic heritage.From the grandeur of Notre Dame Cathedral to the serenity of the Seine River, every corner of Paris tells a
-                 story of its historic and cultural significance, making it a destination that inspires awe and admiration.
+              captivates visitors with its breathtaking views and architectural beauty. The Louvre Museum, home to masterpieces like the Mona Lisa, and 
+              the Musée d'Orsay, showcasing impressionist art, highlight its rich artistic heritage.From the grandeur of Notre Dame Cathedral to the serenity of the Seine River, every corner of Paris tells a
+              story of its historic and cultural significance, making it a destination that inspires awe and admiration.
             </p>
           <button class="bg-gray-800 text-white mt-2 px-4 py-1.5 rounded">Learn More</button>
           </div>
@@ -164,14 +165,14 @@
           <button class="bg-gray-800 text-white mt-2 px-4 py-1.5 rounded">Learn More</button>
           </div>
         </div>
-       </section>
+      </section>
       </div>
-    </div>
+    </div>  
 
 <!-- Popular Restaurant-->  
 <section class="bg-gray-100 py-12">    
     <h2 class="text-2xl font-bold text-center my-6">Most Popular Restaurant</h2>
-  <div class="flex justify-center gap-6">
+  <div class="flex justify-center gap-4">
 
     <div class="text-center">
       <img src="asset/restaurant1.jpg" alt="Restaurant 1" class="w-24 h-24 object-cover rounded-full mx-auto">
